# cyber-synthesis-python-test-assigment

./: CLAUDE.md  Dockerfile.base  docker-compose.yml  pyproject.toml
changelog.d/: 20251218_microservices_implementation.md
scripts/: init-multiple-dbs.sh
services/: __init__.py
services/auth_match/: Dockerfile  __init__.py  main.py
services/auth_match/app/: __init__.py
services/auth_match/app/api/: __init__.py  auth.py  matches.py  profiles.py  users.py
services/auth_match/app/core/: __init__.py  config.py
services/auth_match/app/models/: __init__.py  match.py  profile.py  user.py
services/auth_match/app/schemas/: __init__.py  match.py  profile.py  user.py
services/auth_match/app/services/: __init__.py  match_service.py  user_service.py
services/auth_match/tests/: __init__.py  test_auth_match.py
services/chat_core/: Dockerfile  __init__.py  main.py
services/chat_core/app/: __init__.py
services/chat_core/app/api/: __init__.py  chats.py  messages.py
services/chat_core/app/core/: __init__.py  config.py
services/chat_core/app/models/: __init__.py  chat.py  message.py
services/chat_core/app/schemas/: __init__.py  chat.py  message.py
services/chat_core/app/services/: __init__.py  chat_service.py
services/chat_core/tests/: __init__.py  test_chat_core.py
services/events/: Dockerfile  __init__.py  main.py
services/events/app/: __init__.py
services/events/app/api/: __init__.py  events.py  tickets.py
services/events/app/core/: __init__.py  config.py
services/events/app/models/: __init__.py  event.py  ticket.py
services/events/app/schemas/: __init__.py  event.py  ticket.py
services/events/app/services/: __init__.py  event_service.py
services/events/tests/: __init__.py  test_events.py
services/gamification_billing/: Dockerfile  __init__.py  main.py
services/gamification_billing/app/: __init__.py
services/gamification_billing/app/api/: __init__.py  gamification.py  wallet.py
services/gamification_billing/app/core/: __init__.py  config.py
services/gamification_billing/app/models/: __init__.py  rating.py  subscription.py  wallet.py
services/gamification_billing/app/schemas/: __init__.py  dice.py  rating.py  wallet.py
services/gamification_billing/app/services/: __init__.py  gamification_service.py  wallet_service.py
services/gamification_billing/tests/: __init__.py  test_gamification.py
services/geo/: Dockerfile  __init__.py  main.py
services/geo/app/: __init__.py
services/geo/app/api/: __init__.py  locations.py  places.py  routes.py
services/geo/app/core/: __init__.py  config.py
services/geo/app/models/: __init__.py  location.py  place.py  route.py
services/geo/app/schemas/: __init__.py  location.py  place.py  route.py
services/geo/app/services/: __init__.py  geo_service.py
services/geo/tests/: __init__.py  test_geo.py
services/social_feed/: Dockerfile  __init__.py  main.py
services/social_feed/app/: __init__.py
services/social_feed/app/api/: __init__.py  posts.py  stories.py
services/social_feed/app/core/: __init__.py  config.py
services/social_feed/app/models/: __init__.py  comment.py  like.py  post.py  story.py
services/social_feed/app/schemas/: __init__.py  comment.py  post.py  story.py
services/social_feed/app/services/: __init__.py  feed_service.py
services/social_feed/tests/: __init__.py  test_social_feed.py
shared/: __init__.py
shared/auth/: __init__.py  jwt.py  password.py
shared/database/: __init__.py  base.py  session.py
shared/messaging/: __init__.py  events.py
tests/: test_shared.py
